<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tesztelesi-modszerek-charlie</groupId>
  <artifactId>tesztelesi-modszerek-charlie</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>1.6.6</version>
        <dependencies>
          <dependency>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-junit5-plugin</artifactId>
            <version>0.11</version>
          </dependency>
        </dependencies>

        <!-- Itt kell konfigurálni -->
        <configuration>
          <!-- Legyenek csak az itt megadott csomag osztályai mutálva -->
          <targetClasses>
            <param>us.ihmc.euclid.*</param>
          </targetClasses>

          <!-- Legyenek csak az itt megadott csomag teszjei futtava -->
          <targetTests>
            <param>us.ihmc.euclid.*</param>
          </targetTests>

          <!-- 8 szál használata. -->
          <threads>8</threads>

          <!-- Használt mutátorok. -->
          <mutators>
            <!-- Ez 7 darab alap mutátort foglal magába. -->
            <mutator>STRONGER</mutator>
          </mutators>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.7.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.ejml</groupId>
      <artifactId>ejml-all</artifactId>
      <version>0.40</version>
    </dependency>

  </dependencies>
</project>